# theia-parse

./: .gitignore  README.adoc  pyproject.toml
scripts/: 01_estimate_costs.py  01_parse_dir.py  02_parse_dir.py  03_parsed_to_markdown.py  03_restore_duplicates.py  04_estimate_costs.py  04_parsed_to_markdown.py  parse_dir.py
tests/: conftest.py
tests/parser/file_parser/pdf/: pdf_parser_test.py
tests/utils/: files_test.py
theia_parse/: __init__.py  __spi__.py  const.py  model.py  types.py
theia_parse/formatter/: __spi__.py  markdown_formatter.py
theia_parse/llm/: __init__.py  __spi__.py  prompt_templates.py
theia_parse/llm/openai/: azure_openai_llm.py  openai_llm.py  prompt_templates.py  util.py
theia_parse/llm/response_parser/: json_parser.py
theia_parse/parser/: __spi__.py  directory_parser.py  document_parser.py  json_parser.py  parser.py
theia_parse/parser/file_parser/: __init__.py  __spi__.py  pdf_parser.py
theia_parse/parser/file_parser/pdf/: embedded_pdf_page_image.py  pdf_parser.py
theia_parse/parser/file_parser/pdf/image_extractor/: __spi__.py  pymupdf_image_extractor.py  yodocus_image_extractor.py
theia_parse/util/: bbox.py  duplicates.py  files.py  image.py  log.py
