[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "theia-parse"
version = "0.1.0"
description = "Document Parser via Multimodal LLMs"
authors = [ ]

[tool.ruff]
target-version = "py312"
select = ["B", "E", "F", "I", "W"]

[tool.ruff.isort]
lines-after-imports = 2

[tool.poetry.dependencies]
python = "~3.12.2"
Jinja2 = "~3.1.4"
openai = "~1.28.1"
pdfplumber = "~0.11.0"
pydantic = "~2.7.1"
pydantic-settings = "~2.2.1"
loguru = "~0.7.2"

[tool.poetry.dev-dependencies]
pytest = "7.4.2"
pytest-cov = "3.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [ "tests", "tests_integration", "tests_e2e"]
python_files = [ "test_*.py", "*Test.py", "*_test.py",]
