[tool.poetry]
name = "theia-parse"
version = "0.2.0"
description = "Document Parser via Multimodal LLMs"
license = "Apache-2.0"
authors = [ "tea-de-kay", ]

[tool.poetry.dependencies]
python = ">3.10.0"
Jinja2 = "^3.1.4"
openai = "^1.48.0"
pdfplumber = "^0.10.4"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
loguru = "^0.7.2"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-cov = "5.0.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [ "tests", "tests_integration", "tests_e2e"]
python_files = [ "test_*.py", "*Test.py", "*_test.py",]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2


[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
