[tool.poetry]
name = "theia-parse"
version = "0.6.1"
description = "Document Parser via Multimodal LLMs"
license = "Apache-2.0"
authors = [ "tea-de-kay", ]

[tool.poetry.dependencies]
python = "~=3.12.0"
Jinja2 = "^3.1.4"
openai = "^1.48.0"
pdfplumber = "^0.11.5"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
loguru = "^0.7.2"
tqdm = "^4.66.0"
pdf2image = "^1.17.0"

pymupdf4llm = { version = "^0.0.26", optional = true}
yodocus = { git = "https://github.com/tea-de-kay/yodocus.git", tag = "0.1.7", optional = true}
huggingface-hub = { version = "0.34.*", optional = true}

[tool.poetry.extras]
pymupdf = ["pymupdf4llm"]
yodocus = ["yodocus"]
yodocus-huggingface = ["yodocus", "huggingface-hub"]

[tool.poetry.group.dev.dependencies]
pytest = "8.*"
pytest-cov = "5.*"
ipykernel = "6.*"
ipywidgets = "8.*"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [ "tests", "tests_integration", "tests_e2e"]
python_files = [ "test_*.py", "*Test.py", "*_test.py",]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "S", "SIM", "UP", "W"]
ignore = ["SIM103", "S101"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pycodestyle]
max-line-length = 120


[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
